style.css
#fib {
	display: inline-block;
	width: 15000px;
}

#pell {
	display: inline-block;
	width: 15000px;
}
#trib {
	display: inline-block;
	width: 15000px;
}

.fib {
	background-color: rgba(0,0,255,0.1);
	text-align: center;
}

.fib-left {
	float: left;
	display: inline-block;
	text-align: center;

	margin-right: 4px;
	background-color: rgba(0,0,255,0.1);
}

.fib-right {
	float: right;
	display: inline-block;
	text-align: center;

	margin-left: 4px;
	background-color: rgba(0,0,255,0.1);
}

.body {
    font-family: monospace;
}

.pell {
	background-color: rgba(0,255,0,0.05);
	text-align: center;
}

.pellpellleft {
	float: left;
	display: inline-block;
	text-align: center;

	margin-right: 4px;
	background-color: rgba(0,255,0,0.05);
}

.pellpellright {
	float: right;
	display: inline-block;
	text-align: center;

	margin-left: 4px;
	background-color: rgba(0,255,0,0.05);
}

.trib {
	background-color: rgba(255,0,0,0.1);
	text-align: center;
}

.tribtribleft {
	float: left;
	display: inline-block;
	text-align: center;

	margin-right: 4px;
	background-color: rgba(255,0,0,0.1);
}

.tribtribright {
	float: right;
	display: inline-block;
	text-align: center;

	margin-left: 4px;
	background-color: rgba(255,0,0,0.1);
}

.tribtribmiddle {
	float: middle;
	display: inline-block;
	text-align: center;

	margin-left: 4px;
	background-color: rgba(255,0,0,0.1);
}

